--- a/views/groups/viewGroup.html
+++ b/views/groups/viewGroup.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 {% block sidebar_top %}
 <ul>
-    <li><a href="/email/Group/{{group.id}}/">Email Group</a>
-    <li><a href="/forum/{{group.id}}/">Group Forums</a>
-    {% if can.addrole %}
-    <li><a href="/groups/{{group.id}}/CreateRole/">Create a New Role</a>
-    {% endif %}
     {% if can.adduser %}
     <li><a href="#" onClick="toggle(0)">Add User</a>
+    {% endif %}
+    {% if can.addrole %}
+    <li><a href="/groups/{{group.id}}/CreateRole/">Create a New Role</a>
     {% endif %}
     {% if can.addgroup %}
     <li><a href="/groups/{{group.id}}/Addsubgroup/">Add Subgroup</a>
     {% endif %}
+    <li><a href="/forum/{{group.id}}/">Group Forums</a>
+    <li><a href="/email/Group/{{group.id}}/">Email Group</a>
 </ul>
 {% endblock%}
 {% block content %}
@@ -35,7 +35,7 @@
 {% for usr in r.users.all %}
 {{ usr.username }} (
 {% if r.name != "Owner" and can.editrole %}
-<a href="/roles/EditPerms/{{r.id}}/">{{r.name}}</a>
+<a href="/groups/EditPerms/{{r.id}}/">{{r.name}}</a>
 {% else %}
 {{r.name}}
 {% endif %}
@@ -47,7 +47,7 @@
 {% endif %}
 {% if can.edituser and can.deluser and usr.id != user.id%} | {% endif %}
 {% if can.deluser and user.id != usr.id %}
-<a href="/groups/{{group.id}}/RemoveUser/{{usr.id}}/">Delete User</a>
+<a href="/groups/{{group.id}}/RemoveUser/{{usr.id}}/">Remove User</a>
 {% endif %}
 </div>
 
