--- a/views/test/welcome2.html
+++ b/views/test/welcome2.html
@@ -10,6 +10,7 @@
 	 <a href="/groups/{{g.group.id}}/">{{g.group.group_name}}</a> 
 	 {% if g.candeletegroup %}
 	 [ <a href="/gus_test/Group/Delete/{{g.group.id}}/">Delete</a> ]
+	 [ <a href="/groups/{{g.group.id}}/RemoveUser/{{user.id}}/">Leave Group</a> ]
 	 {% endif %}
 	 {% comment %}
 	 [ <a href="/gus_test/Group/Add">Add Subgroup</a> ]
