--- a/views/test/welcome.html
+++ b/views/test/welcome.html
@@ -2,7 +2,7 @@
 {% block pagetitle %}Gus Test Suite{%endblock%}
 {% block content %}
 <div style="width:250px;float:right">
-<h3>Groups [<a href="/gus_test/Group/Add">Add</a> ]</h3>
+<h3>Groups [<a href="/groups/Add">Add</a> ]</h3>
 	{% for grp in groups %}
 	<div>{{grp}}
 	 
