--- a/views/users/profile.html
+++ b/views/users/profile.html
@@ -24,7 +24,7 @@ Profile
 		  	{{bill.outstanding}}
 		  {% endfor %}
 		  </p>
-		  <a href="/gallery">Gallery - {{role.group.my_images}}</a>
+		  <a href="/gallery">Gallery - {{role.group.my_images}} images uploaded by you</a>
 		  <p></p>
 		  <a href="/forum/{{role.group.id}}">Forums</a>
 		  </td>
