Great! Profile now says how many images you have in a group's gallery

--- a/views/users/profile.html
+++ b/views/users/profile.html
@@ -24,8 +24,9 @@ Profile
 		  	{{bill.outstanding}}
 		  {% endfor %}
 		  </p>
-		  <a href="/gallery">Gallery</a>
-		  <p> - {{role.group.my_images}} images uploaded by you</p>
+		  <p>
+		  <a href="/gallery">Gallery</a> - {{role.group.my_images}} images uploaded by you
+		  </p>
 		  <p></p>
 		  <a href="/forum/{{role.group.id}}">Forums</a>
 		  </td>
