--- a/views/forum/posts.html
+++ b/views/forum/posts.html
@@ -18,6 +18,7 @@
 
 {% block content %}
 <table border="1" cellpadding="6" class="table" width="95%">
+<th colspan="3">{{thread.thread_name}}</th>
 {% for post in posts %}
 	<tr>
 	 <th><b><!--<a href="">-->{{post.user.username|capfirst}}<!--</a>--></th>
