--- a/views/forum/posts.html
+++ b/views/forum/posts.html
@@ -17,6 +17,7 @@
 {% endblock %}
 
 {% block content %}
+{% if posts|length > 0 %}
 <table border="1" cellpadding="6" class="table" width="95%">
 <th colspan="3">{{thread.thread_name}}</th>
 {% for post in posts %}
@@ -27,24 +28,32 @@
 	<tr colspan="3">
 	 <td colspan="3">{{post.post_text}}</td>
 	</tr>
-	<tr colspan="2">
-	<td align="center"><a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}/add_post">
-	{% if can.addpost %}
-	 Post Reply
+	{% if can.addpost or can.editpost or can.deletepost %}
+	 <tr colspan="2">
+	 <td align="center">
+	 {% if can.addpost %}
+	  <a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}/add_post">Post Reply</a>
+	 {% endif %}
+	 </td>
+	 <td align="center">
+	 {% if can.editpost %}
+	  <a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}/{{post.id}}/edit_post">Edit Post</a>
+	 {% endif %}
+	 </td>
+	 <td align="center">
+	 {% if can.deletepost %}
+	  <a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}/{{post.id}}/delete_post">Delete Post</a>
+	 {% endif %}
+	 </td>
+	 </tr>
 	{% endif %}
-	</a></td>
-	<td align="center"><a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}/{{post.id}}/edit_post">
-	{% if can.editpost %}
-	 Edit Post
-	{% endif %}
-	</a></td>
-	<td align="center"><a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}/{{post.id}}/delete_post">
-	{% if can.deletepost %}
-	 Delete Post
-	{% endif %}
-	</a></td>
-	</tr>
 {% endfor %}
 </table>
-
+{% endif %}
+{% if posts|length == 0 %}
+ <p>Somehow this thread has no posts! You should report this to an admin!</p>
+ {% if can.deletethread %}
+  <p>You should <a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}/delete_thread">delete</a> this thread.</p>
+ {% endif %}
+{% endif %}
 {% endblock content %}
