added link to group calendar page in groups profile page sidebar

--- a/views/groups/viewGroup.html
+++ b/views/groups/viewGroup.html
@@ -10,6 +10,7 @@
     {% if can.addgroup %}
     <li><a href="/groups/{{group.id}}/Addsubgroup/">Add Subgroup</a>
     {% endif %}
+    <li><a href="/calendar/group{{group.id}}/">Group Calendar</a>
     <li><a href="/forum/{{group.id}}/">Group Forums</a>
     <li><a href="/email/Group/{{group.id}}/">Email Group</a>
 </ul>
