--- a/views/groups/viewGroup.html
+++ b/views/groups/viewGroup.html
@@ -10,6 +10,9 @@
     {% if can.addgroup %}
     <li><a href="/groups/{{group.id}}/Addsubgroup/">Add Subgroup</a>
     {% endif %}
+    {% if can.delgroup %}
+    <li><a href="/groups/Delete/{{group.id}}/">Delete Group</a>
+    {% endif %}
     <li><a href="/calendar/group{{group.id}}/">Group Calendar</a>
     <li><a href="/gallery/group/{{group.id}}/">Group Gallery</a>
     <li><a href="/forum/{{group.id}}/">Group Forums</a>
