got rid of unneeded links

--- a/views/base.html
+++ b/views/base.html
@@ -26,8 +26,10 @@
 
     <div class="topbar">
         {% block menu %}
+	{% comment %}
             <a href="/gus_test/">Manage Groups and Users</a> | 
             <a href="/groups/">My Groups</a> | 
+	{% endcomment %}
             <a href="/calendar/">My Calendar</a> | 
             <a href="/email/">My Messages</a> | 
             <a href="/bill/">My Bills</a> | 
