--- a/views/users/profile.html
+++ b/views/users/profile.html
@@ -5,7 +5,7 @@ Profile
 
 {% block content %}
 
-<h2>Welcome, {{usr.username}}<hr/>
+<h2>Welcome, {{usr.real_name}}<hr/>
 <h4></h4>
 <p>Email: {{usr.email}}</p>
 
