beta banner stuff

--- a/views/base.html
+++ b/views/base.html
@@ -16,6 +16,9 @@
 <div class="outer-container">
 <div class="inner-container">
     <div class="header">
+    	  <div style="float:left">
+    	  	<img src="/includes/images/css_img/beta.png" /> 
+    	  	</div>
         <div class="title">
             {% block title %}
                 <a href="/"><img src="/include/images/guspy.png"/></a>
