fixed image link and added link to bug reporting

--- a/views/base.html
+++ b/views/base.html
@@ -17,7 +17,7 @@
 <div class="inner-container">
     <div class="header">
     	  <div style="float:left">
-    	  	<img src="/includes/images/css_img/beta.png" /> 
+    	  	<a href="http://bugs.joranbeasley.com/GUS/"><img src="/include/images/css_img/beta.png" /></a> 
     	  	</div>
         <div class="title">
             {% block title %}
