changed link from reports to googledocs help

--- a/views/base.html
+++ b/views/base.html
@@ -70,7 +70,7 @@
                 {% block sidebar_sidewide %}
                 <h2>Gus</h2>
                 <ul>
-                    <li><a href="http://guspy.joranbeasley.com/reports/index.html">Reports</a></li>
+                    <li><a href="https://docs.google.com/document/pub?id=1uWUyukRuzSW0uTwWk9wjTEQqmqnxjEoYgT2F5STrg4Q&pli=1">Help</a></li>
                 </ul>
                 {% endblock %}
 
