--- a/views/base.html
+++ b/views/base.html
@@ -16,12 +16,12 @@
 <div class="outer-container">
 <div class="inner-container">
     <div class="header">
-    	  <div style="float:left">
-    	  	<a href="http://bugs.joranbeasley.com/GUS/"><img src="/include/images/css_img/beta.png" /></a> 
-    	  	</div>
+    	<div class="beta">
+     		<a href="http://bugs.joranbeasley.com/GUS/"><img src="/include/images/css_img/beta.png" /></a> 
+    	</div>
         <div class="title">
             {% block title %}
-                <a href="/"><img src="/include/images/guspy.png"/></a>
+                <a href="/"><img class="header_image" src="/include/images/guspy.png"/></a>
             {% endblock %}</td>
             <div class="slogan">{% block subtitle %}Groups in a University Setting{% endblock %}</div>
         </div>
