--- a/views/groups/viewGroup.html
+++ b/views/groups/viewGroup.html
@@ -16,7 +16,7 @@
     <li><a href="/calendar/group{{group.id}}/">Group Calendar</a>
     <li><a href="/gallery/group/{{group.id}}/">Group Gallery</a>
     <li><a href="/forum/{{group.id}}/">Group Forums</a>
-    <li><a href="/email/Group/{{group.id}}/">Email Group</a>
+    <li><a href="/email/group/{{group.id}}/">Email Group</a>
 </ul>
 {% endblock%}
 {% block content %}
