added calendar link to groups listing in profile page.

--- a/views/users/profile.html
+++ b/views/users/profile.html
@@ -26,9 +26,11 @@ Profile
 		  {% endfor %}
 		  </p>
 		  <p>
+      <a href="/calendar/group{{role.group.id}}/">Calendar</a>
+      </p>
+		  <p>
 		  <a href="/gallery">Gallery</a> - {{role.group.my_images}} images uploaded by you
 		  </p>
-		  <p></p>
 		  <a href="/forum/{{role.group.id}}">Forums</a>
 		  </td>
 	  </tr>
