Added MCE for all textareas.

--- a/views/base.html
+++ b/views/base.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="/include/css/default.css" media="screen"/>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> 
 		<script type="text/javascript" src="/include/js/jquery-ui-1.8.11.custom.min.js"></script>
+		<script type="text/javascript" src="/include/js/tiny_mce/tiny_mce.js"></script>
+		<script type="text/javascript" src="/include/js/mce.js"></script>
 		<link rel="stylesheet" type="text/css" href="/include/css/ui-lightness/jquery-ui-1.8.11.custom.css" media="screen"/>
 		{% block custom_header %}
 		{% endblock %}
