adding /listing to the side bar

--- a/views/base.html
+++ b/views/base.html
@@ -74,6 +74,13 @@
                 <ul>
                     <li><a href="https://docs.google.com/document/pub?id=1uWUyukRuzSW0uTwWk9wjTEQqmqnxjEoYgT2F5STrg4Q&pli=1">Help</a></li>
                 </ul>
+
+
+				  <ul>
+	                   <li><a href="/listing">All Groups</a></li>
+	              </ul>
+
+
                 {% endblock %}
 
                 {% block sidebar_bottom %}
