fixed logo. Got rid of weird cyan lines

--- a/views/base.html
+++ b/views/base.html
@@ -21,7 +21,7 @@
     	</div>
         <div class="title">
             {% block title %}
-                <a href="/"><img class="header_image" src="/include/images/guspy.png"/></a>
+                <a href="/"><img class="header_image" src="/include/images/guspy2.png"/></a>
             {% endblock %}</td>
             <div class="slogan">{% block subtitle %}Groups in a University Setting{% endblock %}</div>
         </div>
