--- a/views/users/listing.html
+++ b/views/users/listing.html
@@ -1,31 +1,11 @@
 {% extends "base.html" %}
+
 {% block pagetitle %}
 Profile
 {% endblock pagetitle %}
 
+
 {% block content %}
-
-<table width="95%">
-	  <tr align="left">
-		  <th>All Groups </th>
-	  </tr>
-	
-		{% for grp in groups %}
-		<tr>
-		  <td width="10%">
-
-			 [ <a href="/groups/{{grp.id}}/">{{grp}}</a> ] 
-		  </td>
-		</tr>
-		{% endfor %}
-	
-
-	  </tr>
-  </table>
-
-
-
-{% endblock content %}
-
-
+{% include "users/list.html" %}
+{% endblock %}
 
