--- a/views/welcome.html
+++ b/views/welcome.html
@@ -18,12 +18,15 @@
 <h2>G.U.S.</h2>
 <hr/>
 <h3>What is Gus?</h3><ul>
-<li>Set of group management tools</li>
+<li>A set of group management tools</li>
 <li>Aimed at university-style groups </li>
 <li><strong>Simple</strong></li>
 <li>Easy to pick up, straight to the point</li>
 <li><strong>Modular</strong></li>
-<li>Modules: Calendar, Forum, Image Gallery...</li>
+<li>Calendar</li>
+<li>Forum</li>
+<li>Image Gallery</li>
+<li>News</li>
 <li><strong>Granular</strong></li>
 <li>Control who has access to specific information</li>
 </ul>
