--- a/views/welcome.html
+++ b/views/welcome.html
@@ -15,19 +15,19 @@
 <br/>
 
 {% else %}
-<h2>G.U.S.</h2>
-<hr/>
-<h3>What is Gus?</h3><ul>
-<li>A set of group management tools</li>
-<li>Aimed at university-style groups </li>
-<li><strong>Simple</strong></li>
+<h2>Gus</h2>
+<strong>Gus is a set of group management tools tailored for University-style groups.</strong>
+<ul>
+<h3>Simple</h3>
 <li>Easy to pick up, straight to the point</li>
-<li><strong>Modular</strong></li>
+<h3>Modular</strong></h3>
 <li>Calendar</li>
 <li>Forum</li>
 <li>Image Gallery</li>
 <li>News</li>
-<li><strong>Granular</strong></li>
+<li>Messages</li>
+<li>Bills</li>
+<h3>Granular</h3>
 <li>Control who has access to specific information</li>
 </ul>
 {% endif %}
