--- a/views/users/login.html
+++ b/views/users/login.html
@@ -6,6 +6,9 @@ Login
 {% block content %}
 <form method="post">
 <!--Print Login Form -->
+{% if not fail %}
+<p><strong>Username or Password is incorrect.</strong></p>
+{% endif %}
 {{ form.as_p }}
 <!-- add cross site request forgery safety key(reqd for all forms) --> 
 {% csrf_token %}
