Worked on adding a forgot password functionality

--- a/views/users/login.html
+++ b/views/users/login.html
@@ -14,4 +14,7 @@ Login
 {% csrf_token %}
 <input type="submit" value="Login">
 </form>
+<br>
+<a href="/login/reset/">Forgot Password</a>
+
 {% endblock content %}
