--- a/views/users/profile.html
+++ b/views/users/profile.html
@@ -12,6 +12,10 @@ Profile
 <a href="/email/check">{{unread_emails}} unread messsages</a></p>
 
 {% for role in roles %}
+	{% comment %}
+  {%if role.isSiteAdminRole %}
+	{% else  %}
+	{% endcomment %}
   <table width="95%">
 	  <tr align="left">
 		  <th>Group: {{role.group.group_name}} [ <a href="/groups/{{role.group.id}}/RemoveUser/{{user.id}}/">Leave Group</a> ]</th>
@@ -19,7 +23,7 @@ Profile
   	<tr>
 		  <td width="10%">
 		  <p><a href="/groups/{{role.group.id}}/">Go to {{role.group.group_name}}</a>
-		  <p>Description - {{role.group.group_description}}</p>
+		  <p>Description - {{role.group.group_description|safe}}</p>
 		  <p>Role: {{role.name}}</p>
 		  <p>	
 		  <a href="/bill/{{role.group.id}}">Bills:</a>
@@ -37,6 +41,7 @@ Profile
 		  </td>
 	  </tr>
   </table>
+  
 {% endfor %}
 
 {% endblock content %}
