bah was up working on somethin else and started w/ autocomplete

--- a/views/groups/viewGroup.html
+++ b/views/groups/viewGroup.html
@@ -29,6 +29,7 @@
 <form method="post" >
 <fieldset><legend>Add User to Group</legend>
 {{ formAddUser.as_p }}
+<input id="autoselect">
 {% csrf_token %}
 <input type="submit" value="Add New Member">
 <a href="#" onClick="toggle(1)">Cancel</a>
@@ -103,4 +104,13 @@ function toggle(flag){
 {% comment %}
 {{ can }} {{ group }}
 {% endcomment %}
+{% if can.adduser %}
+<script type="text/javascript">
+opts = $('#id_new_member>option')
+opts=opts.map(function (i){return opts[i].innerHTML})
+opts=opts.filter(function(i){return opts[i].match('User:');})
+opts=opts.map(function(i){return opts[i].substr(6,opts[i].length)}
+$('#autoselect').autocomplete({source:opts})
+</script>
+{% endif %}
 {% endblock %}
