bah was up working on somethin else and started w/ autocomplete

--- a/views/groups/viewGroup.html
+++ b/views/groups/viewGroup.html
@@ -106,6 +106,48 @@ function toggle(flag){
 {% endcomment %}
 {% if can.adduser %}
 <script type="text/javascript">
+if (!Array.prototype.map)
+{
+  Array.prototype.map = function(fun /*, thisp*/)
+  {
+    var len = this.length;
+    if (typeof fun != "function")
+      throw new TypeError();
+
+    var res = new Array(len);
+    var thisp = arguments[1];
+    for (var i = 0; i < len; i++)
+    {
+      if (i in this)
+        res[i] = fun.call(thisp, this[i], i, this);
+    }
+
+    return res;
+  };
+}
+if (!Array.prototype.filter)
+{
+  Array.prototype.filter = function(fun /*, thisp*/)
+  {
+    var len = this.length;
+    if (typeof fun != "function")
+      throw new TypeError();
+
+    var res = new Array();
+    var thisp = arguments[1];
+    for (var i = 0; i < len; i++)
+    {
+      if (i in this)
+      {
+        var val = this[i]; // in case fun mutates this
+        if (fun.call(thisp, val, i, this))
+          res.push(val);
+      }
+    }
+
+    return res;
+  };
+}
 opts = $('#id_new_member>option')
 opts=opts.map(function (i){return opts[i].innerHTML})
 opts=opts.filter(function(i){return opts[i].match('User:');})
